; ModuleID = '/home/carl/AnghaBench/seafile/lib/extr_utils.c_ccnet_key_file_get_string.c'
source_filename = "/home/carl/AnghaBench/seafile/lib/extr_utils.c_ccnet_key_file_get_string.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @ccnet_key_file_get_string(i32* %0, i8* %1, i8* %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  store i32* %0, i32** %5, align 8
  store i8* %1, i8** %6, align 8
  store i8* %2, i8** %7, align 8
  %9 = load i32*, i32** %5, align 8
  %10 = load i8*, i8** %6, align 8
  %11 = load i8*, i8** %7, align 8
  %12 = call i32 @g_key_file_has_key(i32* %9, i8* %10, i8* %11, i32* null)
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %15, label %14

14:                                               ; preds = %3
  store i8* null, i8** %4, align 8
  br label %33

15:                                               ; preds = %3
  %16 = load i32*, i32** %5, align 8
  %17 = load i8*, i8** %6, align 8
  %18 = load i8*, i8** %7, align 8
  %19 = call i8* @g_key_file_get_string(i32* %16, i8* %17, i8* %18, i32* null)
  store i8* %19, i8** %8, align 8
  %20 = load i8*, i8** %8, align 8
  %21 = icmp ne i8* %20, null
  br i1 %21, label %22, label %31

22:                                               ; preds = %15
  %23 = load i8*, i8** %8, align 8
  %24 = getelementptr inbounds i8, i8* %23, i64 0
  %25 = load i8, i8* %24, align 1
  %26 = sext i8 %25 to i32
  %27 = icmp eq i32 %26, 0
  br i1 %27, label %28, label %31

28:                                               ; preds = %22
  %29 = load i8*, i8** %8, align 8
  %30 = call i32 @g_free(i8* %29)
  store i8* null, i8** %4, align 8
  br label %33

31:                                               ; preds = %22, %15
  %32 = load i8*, i8** %8, align 8
  store i8* %32, i8** %4, align 8
  br label %33

33:                                               ; preds = %31, %28, %14
  %34 = load i8*, i8** %4, align 8
  ret i8* %34
}

declare dso_local i32 @g_key_file_has_key(i32*, i8*, i8*, i32*) #1

declare dso_local i8* @g_key_file_get_string(i32*, i8*, i8*, i32*) #1

declare dso_local i32 @g_free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
